Fixed clearing bug after shift untoggled

--- a/src/Canvas.css
+++ b/src/Canvas.css
@@ -12,3 +12,7 @@
     top: 0;
     left: 0;
 }
+
+.canvasContainer.drawingMode {
+    cursor: crosshair !important;/* Crosshair cursor when in drawing mode */
+}
